--- a/src/IoTProtect/IoTProtect/Views/DeviceMeasurementsPage.xaml
+++ b/src/IoTProtect/IoTProtect/Views/DeviceMeasurementsPage.xaml
@@ -20,6 +20,7 @@
                     SelectionChanged="DeviceMeasurementsCollectionView_SelectionChanged"
                     ItemsSource="{Binding ItemsList}"
                     VerticalOptions="FillAndExpand"
+                    ItemSizingStrategy="MeasureFirstItem"
                     >
 
                     <CollectionView.ItemTemplate>
@@ -27,6 +28,8 @@
 
                             <Grid RowSpacing="2">
                                 <Grid.RowDefinitions>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
                                     <RowDefinition Height="*" />
                                     <RowDefinition Height="*" />
                                     <RowDefinition Height="*" />
@@ -40,13 +43,19 @@
                                 <Label Text="Photoresistor:" Grid.Column="0" Grid.Row="0" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
                                 <Label Text="{Binding Photoresistor}" Grid.Column="1" Grid.Row="0" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
 
-                                <Label Text="Ημερομηνία:" Grid.Column="0" Grid.Row="1" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
-                                <Label Text="{Binding CreatedAtLocalDateTime}" Grid.Column="1" Grid.Row="1" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+                                <Label Text="Battery:" Grid.Column="0" Grid.Row="1" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                <Label Text="{Binding BatteryVoltage}" Grid.Column="1" Grid.Row="1" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
 
-                                <Label Text="ID:" Grid.Column="0" Grid.Row="2" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
-                                <Label Text="{Binding ID}" Grid.Column="1" Grid.Row="2" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+                                <Label Text="Uptime:" Grid.Column="0" Grid.Row="2" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                <Label Text="{Binding Uptime}" Grid.Column="1" Grid.Row="2" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
 
-                                <BoxView Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" HeightRequest="1" BackgroundColor="LightSteelBlue" />
+                                <Label Text="Ημερομηνία:" Grid.Column="0" Grid.Row="3" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                <Label Text="{Binding CreatedAtLocalDateTime}" Grid.Column="1" Grid.Row="3" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                <Label Text="ID:" Grid.Column="0" Grid.Row="4" Margin="10,0,0,0" HorizontalTextAlignment="End" VerticalTextAlignment="Center" TextColor="Gray" FontSize="Medium" />
+                                <Label Text="{Binding ID}" Grid.Column="1" Grid.Row="4" Margin="0,0,0,0" HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="FillAndExpand" FontSize="Medium" />
+
+                                <BoxView Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="5" HeightRequest="1" BackgroundColor="LightSteelBlue" />
                             </Grid>
 
                         </DataTemplate>
