pagination implementation. needs fix for last page

--- a/src/IoTProtect/IoTProtect/Views/DeviceMeasurementsPage.xaml
+++ b/src/IoTProtect/IoTProtect/Views/DeviceMeasurementsPage.xaml
@@ -21,6 +21,8 @@
                     ItemsSource="{Binding ItemsList}"
                     VerticalOptions="FillAndExpand"
                     ItemSizingStrategy="MeasureFirstItem"
+                    RemainingItemsThreshold="10"
+                    RemainingItemsThresholdReachedCommand="{Binding RemainingItemsThresholdReachedCommand}"
                     >
 
                     <CollectionView.ItemTemplate>
